--- a/vezba1/tabela/style.css
+++ b/vezba1/tabela/style.css
@@ -4,7 +4,7 @@
     padding: 0px;
 }
 
-#a{
+#id2{
     background-color: rgb(196, 75, 75);
 
 }
@@ -23,4 +23,11 @@ table{
 
 #b{
     background-color: rgb(0, 136, 255);
+}
+
+a{
+    color: rgb(196, 75, 75);
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
 }
