--- a/vezba1/priprema/style.css
+++ b/vezba1/priprema/style.css
@@ -99,6 +99,6 @@ label{
 footer{
     width: 100vw;
     height: 20vh;
-    background-color: rgba(52, 42, 30);
+    background-color: rgb(60, 54, 54)
 }
 
